--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,12 @@ footer {
     margin-left: 30px;
     color: black;
 }
+
+
+
+
+.par {
+    font-size: 30px;
+    margin-top: 10%; 
+    margin-left: 40px;
+}
